@@ -75,11 +75,6 @@ public class BookieServerBean implements BookieServerMXBean, BKMBeanInfo {
     }
 
     @Override
-    public String getServerState() {
-        return bks.nioServerFactory.stats.getServerState();
-    }
-
-    @Override
     public String getServerPort() {
         try {
             return StringUtils.addrToString(Bookie.getBookieAddress(conf));
