@@ -20,6 +20,8 @@ Trunk (unreleased changes)
 
       BOOKKEEPER-312: Implementation of JMS provider (mridul via ivank)
 
+      BOOKKEEPER-556: BookieServerMXBean#getServerState makes no sense (ivank via sijie)
+
 Release 4.2.0 - 2013-01-14
 
   Non-backward compatible changes:
